objects/n2de__Distribution_last_assignee__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Assigned_user__c</fullName>
        <description>Id of the last user this record was assigned to by DE</description>
        <label>Assigned user</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_id__c</fullName>
        <label>Object id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Previous_assignees__c</fullName>
        <label>Previous assignees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Distribution last assignee</label>
    <nameField>
        <label>Distribution Last Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution last assignees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>